...
	     Applicatio-specific strings
	     *************************** -->
	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
	<string name="app_name">OI Shopping List</string>

	<string name="new_item">New item</string>
	<string name="new_list">New list</string>
	<string name="send">Send list</string>
	<string name="mark_all_items">Mark all items</string>
	<string name="unmark_all_items">Unmark all items</string>
	<string name="empty_list_not_sent">Empty list not sent.</string>
	<string name="email_not_available">No application available for sending.</string>
	<string name="my_shopping_list">My shopping list</string>
	<string name="new_list_hint">e.g. wishlist, family list</string>
	<string name="clean_up_list">Clean up list</string>
	<string name="delete_list">Delete list</string>
	<string name="ask_new_list">Enter name of new shopping list</string>
	<string name="ask_rename_list">Rename shopping list</string>
	<string name="ask_edit_item">Edit item</string>
...
	     can choose it later for inclusion again. Information like
	     tags or price will be kept. -->
	<string name="menu_remove_item">Remove item from list</string>
	
	<!-- Delete this item completely. If the user wants to add it again, they
	     have to enter all the information again. -->
	<string name="menu_delete_item">Delete item permanently</string>
	<string name="menu_move_item">Move item to other list</string>
    <string name="menu_copy_item">Copy item</string>
	    
	<!-- Button label to add an item to the list. -->
	<string name="add">Add</string>
	
	<string name="menu_pick_items">Pick items</string>
	<string name="menu_start_shopping">Shopping</string>
	
	<!-- Title supplement. '%s' is the name of the current list. -->
	<string name="pick_items_title">%s - Pick items</string>
	
	<!-- Title supplement. '%s' is the name of the current list. -->
...
	<string name="total_checked">Checked: %s</string>
    <string name="priority1_total">Priority 1: %s</string>
    <string name="priority2_total">Priority 1-2: %s</string>
	<string name="priority3_total">Priority 1-3: %s</string>
	<string name="priority4_total">Priority 1-4: %s</string>
	
	<string name="delete_item_confirm">Are you sure you want to permanently delete this item?</string>
	<string name="delete">Delete</string>
	
	<!-- Added to an item to indicate it was bought. -->
	<string name="suffix_checked">... OK</string>
	<string name="empty"></string>
	
	<!-- The shortcut is created on the home screen. -->
...
	<string name="theme_bugdroid">Android</string>
	<string name="theme_classic_export">Classic (from OI Shopping List)</string>
	<string name="theme_bugdroid_export">Android (from OI Shopping List)</string>

	<!--     Dialog box    -->
	<!-- Button label "OK" -->
	<string name="ok">OK</string>
	<!-- Button label "Cancel" -->
	<string name="cancel">Cancel</string>
	<string name="use_theme_for_all_lists">Use this theme for all lists</string>
	<string name="get_more_themes">Get more themes</string>
	
	<!-- preferences -->
...
