<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2007-2008 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
 
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout 
	android:id="@+id/background"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<!-- android:background="@drawable/shoppinglist01d" -->
        <LinearLayout android:id="@+id/filters"
	android:orientation="horizontal" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>     
	<Spinner android:id="@+id/spinner_listfilter"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
        	android:drawSelectorOnTop="true" />
        <Button android:id = "@+id/listfilter" 
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="fill_parent"
			android:visibility="gone"
			android:text="@string/list"
    	/>
	<Button android:id = "@+id/tagfilter" 
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="fill_parent"
			android:text="@string/tags"
    	/>
        <Button android:id = "@+id/storefilter" 
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="fill_parent"
			android:text="@string/stores"
    	/>	
      </LinearLayout>
      <org.openintents.shopping.ui.widget.ShoppingItemsView 
          android:id="@+id/list_items" 
	  android:layout_width="fill_parent"
	  android:layout_height="0dip"
	  android:layout_weight="1"
          android:cacheColorHint="#00000000"
	  />
      <!-- 
        android:transcriptMode="alwaysScroll"
		android:transcriptMode="normal"
		android:stackFromBottom="true"
		android:layout_height="wrap_content" -->
  		<!--  android:layout_weight="0"  -->
  	<LinearLayout android:id="@+id/total_panel"
 		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/count"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip" />
		<TextView android:id="@+id/total_1"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip" />
		<TextView android:id="@+id/total_3"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dip" />
		<TextView android:id="@+id/total_2"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:gravity="right" 
			android:layout_marginRight="10dip" />
	</LinearLayout>
 	<LinearLayout android:id="@+id/add_panel"
 		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<AutoCompleteTextView android:id="@+id/autocomplete_add_item"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_weight="1"/>
		<Button android:id="@+id/button_add_item"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 				
			android:text="@string/add" />
	</LinearLayout>
	
      </LinearLayout>
      <org.openintents.shopping.ui.widget.ActionableToastBar
          android:id="@+id/toast_bar"
          style="@style/ToastBarStyle" />
    </FrameLayout>
    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>
